--- a/src/App.css
+++ b/src/App.css
@@ -110,7 +110,7 @@ a.nav-link.navbar-link:hover{
   color: #5f45d3;
 }
 nav.navbar.scrolled {
-  padding: 0px 0;
+  padding: 8px 0;
   background: rgba(255, 255, 255, 0.12);
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(2.6px);
@@ -118,6 +118,7 @@ nav.navbar.scrolled {
 }
 nav.navbar a.navbar-brand {
     width: 9%;
+    max-width: 150px;
 }
 nav.navbar .navbar-nav .nav-link.navbar-link {
   font-weight: 400;
@@ -223,6 +224,7 @@ nav.navbar .navbar-toggler-icon {
 nav.navbar .navbar-toggler-icon:focus {
 	border-bottom: 2px solid #fff;
 }
+/*
 nav.navbar .navbar-toggler-icon:after,
 nav.navbar .navbar-toggler-icon:before {
 	width: 24px;
@@ -235,6 +237,12 @@ nav.navbar .navbar-toggler-icon:before {
 	z-index: 2;
 	transition: all 300ms linear;
 }
+*/
+nav.navbar .navbar-toggler-icon:after,
+nav.navbar .navbar-toggler-icon:before {
+  transition: all 300ms cubic-bezier(0.4, 0.0, 0.2, 1);
+}
+
 nav.navbar .navbar-toggler-icon:after {
 	top: 8px;
 }
@@ -252,6 +260,16 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 	border-color: transparent;
 }
 
+@media (max-width: 576px) {
+  .social-icon a {
+    width: 32px;
+    height: 32px;
+  }
+
+  .social-icon a img {
+    width: 30%;
+  }
+}
 /************ Banner Css ************/
 .banner {
   margin-top: 0;
